fix: load .env correctly

--- a/ai/Generate_lesson_script.ipynb
+++ b/ai/Generate_lesson_script.ipynb
@@ -236,7 +236,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "# .envファイルの内容を読み込見込む\n",
+        "from dotenv import load_dotenv\n",
         "load_dotenv()"
       ]
     },
