--- a/ai/generate_audio_file.ipynb
+++ b/ai/generate_audio_file.ipynb
@@ -18,7 +18,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -31,26 +31,69 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Requirement already satisfied: websockets in /usr/local/lib/python3.10/dist-packages (13.1)\n",
-            "Requirement already satisfied: soundfile in /usr/local/lib/python3.10/dist-packages (0.12.1)\n",
-            "Requirement already satisfied: openai in /usr/local/lib/python3.10/dist-packages (1.52.2)\n",
-            "Requirement already satisfied: cffi>=1.0 in /usr/local/lib/python3.10/dist-packages (from soundfile) (1.17.1)\n",
-            "Requirement already satisfied: anyio<5,>=3.5.0 in /usr/local/lib/python3.10/dist-packages (from openai) (3.7.1)\n",
-            "Requirement already satisfied: distro<2,>=1.7.0 in /usr/lib/python3/dist-packages (from openai) (1.7.0)\n",
-            "Requirement already satisfied: httpx<1,>=0.23.0 in /usr/local/lib/python3.10/dist-packages (from openai) (0.27.2)\n",
-            "Requirement already satisfied: jiter<1,>=0.4.0 in /usr/local/lib/python3.10/dist-packages (from openai) (0.6.1)\n",
-            "Requirement already satisfied: pydantic<3,>=1.9.0 in /usr/local/lib/python3.10/dist-packages (from openai) (2.9.2)\n",
-            "Requirement already satisfied: sniffio in /usr/local/lib/python3.10/dist-packages (from openai) (1.3.1)\n",
-            "Requirement already satisfied: tqdm>4 in /usr/local/lib/python3.10/dist-packages (from openai) (4.66.5)\n",
-            "Requirement already satisfied: typing-extensions<5,>=4.11 in /usr/local/lib/python3.10/dist-packages (from openai) (4.12.2)\n",
-            "Requirement already satisfied: idna>=2.8 in /usr/local/lib/python3.10/dist-packages (from anyio<5,>=3.5.0->openai) (3.10)\n",
-            "Requirement already satisfied: exceptiongroup in /usr/local/lib/python3.10/dist-packages (from anyio<5,>=3.5.0->openai) (1.2.2)\n",
-            "Requirement already satisfied: pycparser in /usr/local/lib/python3.10/dist-packages (from cffi>=1.0->soundfile) (2.22)\n",
-            "Requirement already satisfied: certifi in /usr/local/lib/python3.10/dist-packages (from httpx<1,>=0.23.0->openai) (2024.8.30)\n",
-            "Requirement already satisfied: httpcore==1.* in /usr/local/lib/python3.10/dist-packages (from httpx<1,>=0.23.0->openai) (1.0.6)\n",
-            "Requirement already satisfied: h11<0.15,>=0.13 in /usr/local/lib/python3.10/dist-packages (from httpcore==1.*->httpx<1,>=0.23.0->openai) (0.14.0)\n",
-            "Requirement already satisfied: annotated-types>=0.6.0 in /usr/local/lib/python3.10/dist-packages (from pydantic<3,>=1.9.0->openai) (0.7.0)\n",
-            "Requirement already satisfied: pydantic-core==2.23.4 in /usr/local/lib/python3.10/dist-packages (from pydantic<3,>=1.9.0->openai) (2.23.4)\n"
+            "Collecting websockets\n",
+            "  Downloading websockets-13.1-cp310-cp310-macosx_11_0_arm64.whl.metadata (6.8 kB)\n",
+            "Collecting soundfile\n",
+            "  Using cached soundfile-0.12.1-py2.py3-none-macosx_11_0_arm64.whl.metadata (14 kB)\n",
+            "Collecting openai\n",
+            "  Using cached openai-1.52.2-py3-none-any.whl.metadata (24 kB)\n",
+            "Requirement already satisfied: python-dotenv in /Users/ooshimakotarou/fairedu/tk_2414/venv/lib/python3.10/site-packages (1.0.1)\n",
+            "Collecting numpy\n",
+            "  Using cached numpy-2.1.2-cp310-cp310-macosx_14_0_arm64.whl.metadata (60 kB)\n",
+            "Collecting pandas\n",
+            "  Using cached pandas-2.2.3-cp310-cp310-macosx_11_0_arm64.whl.metadata (89 kB)\n",
+            "Collecting cffi>=1.0 (from soundfile)\n",
+            "  Downloading cffi-1.17.1-cp310-cp310-macosx_11_0_arm64.whl.metadata (1.5 kB)\n",
+            "Collecting anyio<5,>=3.5.0 (from openai)\n",
+            "  Using cached anyio-4.6.2.post1-py3-none-any.whl.metadata (4.7 kB)\n",
+            "Collecting distro<2,>=1.7.0 (from openai)\n",
+            "  Using cached distro-1.9.0-py3-none-any.whl.metadata (6.8 kB)\n",
+            "Collecting httpx<1,>=0.23.0 (from openai)\n",
+            "  Using cached httpx-0.27.2-py3-none-any.whl.metadata (7.1 kB)\n",
+            "Collecting jiter<1,>=0.4.0 (from openai)\n",
+            "  Using cached jiter-0.6.1-cp310-cp310-macosx_11_0_arm64.whl.metadata (5.2 kB)\n",
+            "Collecting pydantic<3,>=1.9.0 (from openai)\n",
+            "  Using cached pydantic-2.9.2-py3-none-any.whl.metadata (149 kB)\n",
+            "Requirement already satisfied: sniffio in /Users/ooshimakotarou/fairedu/tk_2414/venv/lib/python3.10/site-packages (from openai) (1.3.1)\n",
+            "Requirement already satisfied: tqdm>4 in /Users/ooshimakotarou/fairedu/tk_2414/venv/lib/python3.10/site-packages (from openai) (4.66.5)\n",
+            "Requirement already satisfied: typing-extensions<5,>=4.11 in /Users/ooshimakotarou/fairedu/tk_2414/venv/lib/python3.10/site-packages (from openai) (4.12.2)\n",
+            "Requirement already satisfied: python-dateutil>=2.8.2 in /Users/ooshimakotarou/fairedu/tk_2414/venv/lib/python3.10/site-packages (from pandas) (2.9.0.post0)\n",
+            "Collecting pytz>=2020.1 (from pandas)\n",
+            "  Using cached pytz-2024.2-py2.py3-none-any.whl.metadata (22 kB)\n",
+            "Collecting tzdata>=2022.7 (from pandas)\n",
+            "  Using cached tzdata-2024.2-py2.py3-none-any.whl.metadata (1.4 kB)\n",
+            "Requirement already satisfied: idna>=2.8 in /Users/ooshimakotarou/fairedu/tk_2414/venv/lib/python3.10/site-packages (from anyio<5,>=3.5.0->openai) (3.10)\n",
+            "Requirement already satisfied: exceptiongroup>=1.0.2 in /Users/ooshimakotarou/fairedu/tk_2414/venv/lib/python3.10/site-packages (from anyio<5,>=3.5.0->openai) (1.2.2)\n",
+            "Collecting pycparser (from cffi>=1.0->soundfile)\n",
+            "  Using cached pycparser-2.22-py3-none-any.whl.metadata (943 bytes)\n",
+            "Requirement already satisfied: certifi in /Users/ooshimakotarou/fairedu/tk_2414/venv/lib/python3.10/site-packages (from httpx<1,>=0.23.0->openai) (2024.8.30)\n",
+            "Collecting httpcore==1.* (from httpx<1,>=0.23.0->openai)\n",
+            "  Using cached httpcore-1.0.6-py3-none-any.whl.metadata (21 kB)\n",
+            "Requirement already satisfied: h11<0.15,>=0.13 in /Users/ooshimakotarou/fairedu/tk_2414/venv/lib/python3.10/site-packages (from httpcore==1.*->httpx<1,>=0.23.0->openai) (0.14.0)\n",
+            "Collecting annotated-types>=0.6.0 (from pydantic<3,>=1.9.0->openai)\n",
+            "  Using cached annotated_types-0.7.0-py3-none-any.whl.metadata (15 kB)\n",
+            "Collecting pydantic-core==2.23.4 (from pydantic<3,>=1.9.0->openai)\n",
+            "  Using cached pydantic_core-2.23.4-cp310-cp310-macosx_11_0_arm64.whl.metadata (6.6 kB)\n",
+            "Requirement already satisfied: six>=1.5 in /Users/ooshimakotarou/fairedu/tk_2414/venv/lib/python3.10/site-packages (from python-dateutil>=2.8.2->pandas) (1.16.0)\n",
+            "Downloading websockets-13.1-cp310-cp310-macosx_11_0_arm64.whl (155 kB)\n",
+            "Using cached soundfile-0.12.1-py2.py3-none-macosx_11_0_arm64.whl (1.1 MB)\n",
+            "Using cached openai-1.52.2-py3-none-any.whl (386 kB)\n",
+            "Using cached numpy-2.1.2-cp310-cp310-macosx_14_0_arm64.whl (5.4 MB)\n",
+            "Using cached pandas-2.2.3-cp310-cp310-macosx_11_0_arm64.whl (11.3 MB)\n",
+            "Using cached anyio-4.6.2.post1-py3-none-any.whl (90 kB)\n",
+            "Downloading cffi-1.17.1-cp310-cp310-macosx_11_0_arm64.whl (178 kB)\n",
+            "Using cached distro-1.9.0-py3-none-any.whl (20 kB)\n",
+            "Using cached httpx-0.27.2-py3-none-any.whl (76 kB)\n",
+            "Using cached httpcore-1.0.6-py3-none-any.whl (78 kB)\n",
+            "Using cached jiter-0.6.1-cp310-cp310-macosx_11_0_arm64.whl (301 kB)\n",
+            "Using cached pydantic-2.9.2-py3-none-any.whl (434 kB)\n",
+            "Using cached pydantic_core-2.23.4-cp310-cp310-macosx_11_0_arm64.whl (1.8 MB)\n",
+            "Using cached pytz-2024.2-py2.py3-none-any.whl (508 kB)\n",
+            "Using cached tzdata-2024.2-py2.py3-none-any.whl (346 kB)\n",
+            "Using cached annotated_types-0.7.0-py3-none-any.whl (13 kB)\n",
+            "Using cached pycparser-2.22-py3-none-any.whl (117 kB)\n",
+            "Installing collected packages: pytz, websockets, tzdata, pydantic-core, pycparser, numpy, jiter, httpcore, distro, anyio, annotated-types, pydantic, pandas, httpx, cffi, soundfile, openai\n",
+            "Successfully installed annotated-types-0.7.0 anyio-4.6.2.post1 cffi-1.17.1 distro-1.9.0 httpcore-1.0.6 httpx-0.27.2 jiter-0.6.1 numpy-2.1.2 openai-1.52.2 pandas-2.2.3 pycparser-2.22 pydantic-2.9.2 pydantic-core-2.23.4 pytz-2024.2 soundfile-0.12.1 tzdata-2024.2 websockets-13.1\n"
           ]
         }
       ],
@@ -69,9 +112,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "execution_count": 2,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "from dotenv import load_dotenv\n",
         "load_dotenv()"
@@ -79,7 +133,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 5,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -91,40 +145,40 @@
         {
           "data": {
             "text/plain": [
-              "['/content/drive/MyDrive/FairEdu/図形と方程式/lesson_audio_mds_v5/segment_24.md',\n",
-              " '/content/drive/MyDrive/FairEdu/図形と方程式/lesson_audio_mds_v5/segment_14.md',\n",
-              " '/content/drive/MyDrive/FairEdu/図形と方程式/lesson_audio_mds_v5/segment_10.md',\n",
-              " '/content/drive/MyDrive/FairEdu/図形と方程式/lesson_audio_mds_v5/segment_2.md',\n",
-              " '/content/drive/MyDrive/FairEdu/図形と方程式/lesson_audio_mds_v5/segment_11.md',\n",
-              " '/content/drive/MyDrive/FairEdu/図形と方程式/lesson_audio_mds_v5/segment_16.md',\n",
-              " '/content/drive/MyDrive/FairEdu/図形と方程式/lesson_audio_mds_v5/segment_30.md',\n",
-              " '/content/drive/MyDrive/FairEdu/図形と方程式/lesson_audio_mds_v5/segment_15.md',\n",
-              " '/content/drive/MyDrive/FairEdu/図形と方程式/lesson_audio_mds_v5/segment_21.md',\n",
-              " '/content/drive/MyDrive/FairEdu/図形と方程式/lesson_audio_mds_v5/segment_4.md',\n",
-              " '/content/drive/MyDrive/FairEdu/図形と方程式/lesson_audio_mds_v5/segment_0.md',\n",
-              " '/content/drive/MyDrive/FairEdu/図形と方程式/lesson_audio_mds_v5/segment_8.md',\n",
-              " '/content/drive/MyDrive/FairEdu/図形と方程式/lesson_audio_mds_v5/segment_1.md',\n",
-              " '/content/drive/MyDrive/FairEdu/図形と方程式/lesson_audio_mds_v5/segment_17.md',\n",
-              " '/content/drive/MyDrive/FairEdu/図形と方程式/lesson_audio_mds_v5/segment_22.md',\n",
-              " '/content/drive/MyDrive/FairEdu/図形と方程式/lesson_audio_mds_v5/segment_20.md',\n",
-              " '/content/drive/MyDrive/FairEdu/図形と方程式/lesson_audio_mds_v5/segment_29.md',\n",
-              " '/content/drive/MyDrive/FairEdu/図形と方程式/lesson_audio_mds_v5/segment_7.md',\n",
-              " '/content/drive/MyDrive/FairEdu/図形と方程式/lesson_audio_mds_v5/segment_12.md',\n",
-              " '/content/drive/MyDrive/FairEdu/図形と方程式/lesson_audio_mds_v5/segment_18.md',\n",
-              " '/content/drive/MyDrive/FairEdu/図形と方程式/lesson_audio_mds_v5/segment_3.md',\n",
-              " '/content/drive/MyDrive/FairEdu/図形と方程式/lesson_audio_mds_v5/segment_9.md',\n",
-              " '/content/drive/MyDrive/FairEdu/図形と方程式/lesson_audio_mds_v5/segment_6.md',\n",
-              " '/content/drive/MyDrive/FairEdu/図形と方程式/lesson_audio_mds_v5/segment_26.md',\n",
-              " '/content/drive/MyDrive/FairEdu/図形と方程式/lesson_audio_mds_v5/segment_27.md',\n",
-              " '/content/drive/MyDrive/FairEdu/図形と方程式/lesson_audio_mds_v5/segment_5.md',\n",
-              " '/content/drive/MyDrive/FairEdu/図形と方程式/lesson_audio_mds_v5/segment_23.md',\n",
-              " '/content/drive/MyDrive/FairEdu/図形と方程式/lesson_audio_mds_v5/segment_13.md',\n",
-              " '/content/drive/MyDrive/FairEdu/図形と方程式/lesson_audio_mds_v5/segment_28.md',\n",
-              " '/content/drive/MyDrive/FairEdu/図形と方程式/lesson_audio_mds_v5/segment_19.md',\n",
-              " '/content/drive/MyDrive/FairEdu/図形と方程式/lesson_audio_mds_v5/segment_25.md']"
+              "['/Users/ooshimakotarou/fairedu/tk_2414/ai/図形と方程式/lesson_mds/segment_23.md',\n",
+              " '/Users/ooshimakotarou/fairedu/tk_2414/ai/図形と方程式/lesson_mds/segment_17.md',\n",
+              " '/Users/ooshimakotarou/fairedu/tk_2414/ai/図形と方程式/lesson_mds/segment_0.md',\n",
+              " '/Users/ooshimakotarou/fairedu/tk_2414/ai/図形と方程式/lesson_mds/segment_13.md',\n",
+              " '/Users/ooshimakotarou/fairedu/tk_2414/ai/図形と方程式/lesson_mds/segment_27.md',\n",
+              " '/Users/ooshimakotarou/fairedu/tk_2414/ai/図形と方程式/lesson_mds/segment_4.md',\n",
+              " '/Users/ooshimakotarou/fairedu/tk_2414/ai/図形と方程式/lesson_mds/segment_12.md',\n",
+              " '/Users/ooshimakotarou/fairedu/tk_2414/ai/図形と方程式/lesson_mds/segment_26.md',\n",
+              " '/Users/ooshimakotarou/fairedu/tk_2414/ai/図形と方程式/lesson_mds/segment_5.md',\n",
+              " '/Users/ooshimakotarou/fairedu/tk_2414/ai/図形と方程式/lesson_mds/segment_22.md',\n",
+              " '/Users/ooshimakotarou/fairedu/tk_2414/ai/図形と方程式/lesson_mds/segment_16.md',\n",
+              " '/Users/ooshimakotarou/fairedu/tk_2414/ai/図形と方程式/lesson_mds/segment_1.md',\n",
+              " '/Users/ooshimakotarou/fairedu/tk_2414/ai/図形と方程式/lesson_mds/segment_29.md',\n",
+              " '/Users/ooshimakotarou/fairedu/tk_2414/ai/図形と方程式/lesson_mds/segment_19.md',\n",
+              " '/Users/ooshimakotarou/fairedu/tk_2414/ai/図形と方程式/lesson_mds/segment_18.md',\n",
+              " '/Users/ooshimakotarou/fairedu/tk_2414/ai/図形と方程式/lesson_mds/segment_28.md',\n",
+              " '/Users/ooshimakotarou/fairedu/tk_2414/ai/図形と方程式/lesson_mds/segment_8.md',\n",
+              " '/Users/ooshimakotarou/fairedu/tk_2414/ai/図形と方程式/lesson_mds/segment_9.md',\n",
+              " '/Users/ooshimakotarou/fairedu/tk_2414/ai/図形と方程式/lesson_mds/segment_11.md',\n",
+              " '/Users/ooshimakotarou/fairedu/tk_2414/ai/図形と方程式/lesson_mds/segment_25.md',\n",
+              " '/Users/ooshimakotarou/fairedu/tk_2414/ai/図形と方程式/lesson_mds/segment_6.md',\n",
+              " '/Users/ooshimakotarou/fairedu/tk_2414/ai/図形と方程式/lesson_mds/segment_21.md',\n",
+              " '/Users/ooshimakotarou/fairedu/tk_2414/ai/図形と方程式/lesson_mds/segment_15.md',\n",
+              " '/Users/ooshimakotarou/fairedu/tk_2414/ai/図形と方程式/lesson_mds/segment_2.md',\n",
+              " '/Users/ooshimakotarou/fairedu/tk_2414/ai/図形と方程式/lesson_mds/segment_20.md',\n",
+              " '/Users/ooshimakotarou/fairedu/tk_2414/ai/図形と方程式/lesson_mds/segment_14.md',\n",
+              " '/Users/ooshimakotarou/fairedu/tk_2414/ai/図形と方程式/lesson_mds/segment_3.md',\n",
+              " '/Users/ooshimakotarou/fairedu/tk_2414/ai/図形と方程式/lesson_mds/segment_30.md',\n",
+              " '/Users/ooshimakotarou/fairedu/tk_2414/ai/図形と方程式/lesson_mds/segment_10.md',\n",
+              " '/Users/ooshimakotarou/fairedu/tk_2414/ai/図形と方程式/lesson_mds/segment_24.md',\n",
+              " '/Users/ooshimakotarou/fairedu/tk_2414/ai/図形と方程式/lesson_mds/segment_7.md']"
             ]
           },
-          "execution_count": 2,
+          "execution_count": 5,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -137,13 +191,13 @@
         "import os\n",
         "API_KEY =os.environ.get('OPENAI_API_KEY')\n",
         "client = OpenAI(api_key=API_KEY)\n",
-        "path_list = glob.glob('/content/drive/MyDrive/FairEdu/図形と方程式/lesson_audio_mds_v5/*.md')\n",
+        "path_list = glob.glob('/Users/ooshimakotarou/fairedu/tk_2414/ai/図形と方程式/lesson_mds/*.md')\n",
         "path_list"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -156,15 +210,15 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "\r  0%|          | 0/31 [00:00<?, ?it/s]<ipython-input-4-c592733148bc>:12: DeprecationWarning: Due to a bug, this method doesn't actually stream the response content, `.with_streaming_response.method()` should be used instead\n",
+            "  0%|          | 0/31 [00:00<?, ?it/s]/var/folders/zh/24nsnl894vx4jb_p2lthw1pc0000gn/T/ipykernel_61881/3724007976.py:12: DeprecationWarning: Due to a bug, this method doesn't actually stream the response content, `.with_streaming_response.method()` should be used instead\n",
             "  response.stream_to_file(str(output_path))\n",
-            " 61%|██████▏   | 19/31 [02:02<01:08,  5.71s/it]"
+            "100%|██████████| 31/31 [02:12<00:00,  4.29s/it]\n"
           ]
         }
       ],
       "source": [
         "from tqdm import tqdm\n",
-        "output_dir = Path(\"/content/drive/MyDrive/FairEdu/図形と方程式/whisper_audio_mp3s\")\n",
+        "output_dir = Path('/Users/ooshimakotarou/fairedu/tk_2414/ai/図形と方程式/lesson_whisper_mp3s')\n",
         "for path in tqdm(path_list):\n",
         "  output_path = output_dir / Path(path).with_suffix('.mp3').name\n",
         "  with open(path,\"r\") as audio_file:\n",
@@ -372,11 +426,21 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "Python 3",
+      "display_name": "venv",
+      "language": "python",
       "name": "python3"
     },
     "language_info": {
-      "name": "python"
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.10.2"
     }
   },
   "nbformat": 4,
