fix:audio file, notebooks

--- a/ai/Generate_lesson_script.ipynb
+++ b/ai/Generate_lesson_script.ipynb
@@ -1869,7 +1869,7 @@
         "    print(f\"Executing Code Block {index + 1}:\")\n",
         "\n",
         "    # ファイル名を設定\n",
-        "    image_filename = f\"/content/image_folder/output_{index + 1}.png\"\n",
+        "    image_filename = f\"/Users/ooshimakotarou/fairedu/tk_2414/ai/image_folder/output_{index + 1}.png\"\n",
         "\n",
         "    # コードに画像の保存処理を追加\n",
         "    code = code.replace(\"plt.show()\",\"\")\n",
@@ -1894,7 +1894,7 @@
       "outputs": [],
       "source": [
         "for index, code in enumerate(code_blocks):\n",
-        "  image_filename = f\"/content/image_folder/output_{index + 1}.png\"\n",
+        "  image_filename = f\"/Users/ooshimakotarou/fairedu/tk_2414/ai/image_folder/output_{index + 1}.png\"\n",
         "  if image_filename:\n",
         "    markdown_text = markdown_text.replace(\"```python\\n\"+code+\"```\\n\", f\"![コードブロック {index + 1}]({image_filename})\")"
       ]
@@ -2007,7 +2007,7 @@
       "outputs": [],
       "source": [
         "import glob\n",
-        "path_list = glob.glob('/content/drive/MyDrive/FairEdu/図形と方程式/lesson_mds_v3/*.md')"
+        "path_list = glob.glob('/Users/ooshimakotarou/fairedu/tk_2414/ai/図形と方程式/lesson_mds/*.md')"
       ]
     },
     {
@@ -2164,7 +2164,7 @@
         "  name = path.split('/')[-1]\n",
         "  with open(path, 'r') as md_file:\n",
         "    lesson_sentence = md_file.read()\n",
-        "  with open(\"/content/drive/MyDrive/FairEdu/図形と方程式/audio_texts_v3/\"+name, 'w') as audio_file:\n",
+        "  with open(\"/Users/ooshimakotarou/fairedu/tk_2414/ai/図形と方程式/lesson_audio_mds/\"+name, 'w') as audio_file:\n",
         "    audio_file.write(llm_response(audio_prompt.format(sentence=lesson_sentence)))"
       ]
     },
