--- a/ai/generate_audio_file.ipynb
+++ b/ai/generate_audio_file.ipynb
@@ -191,7 +191,7 @@
         "import os\n",
         "API_KEY =os.environ.get('OPENAI_API_KEY')\n",
         "client = OpenAI(api_key=API_KEY)\n",
-        "path_list = glob.glob('/Users/ooshimakotarou/fairedu/tk_2414/ai/図形と方程式/lesson_mds/*.md')\n",
+        "path_list = glob.glob('/Users/ooshimakotarou/fairedu/tk_2414/ai/図形と方程式/lesson_audio_mds/*.md')\n",
         "path_list"
       ]
     },
